// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bildwurf Ad Block should render Default 1`] = `
<DocumentFragment>
  <script
    data-testid="fake-script"
    src="https://media.online.bildwurf.ch/js/code.min.js"
  />
  <div
    class="css-1ege008-BildwurfBlockWrapper e14oxtci0"
  >
    
            
    <div
      id="bildwurf-injection-wrapper"
    >
      
              
      <ins
        classname="aso-zone"
        data-zone="77348"
      />
      
            
    </div>
    
          
  </div>
</DocumentFragment>
`;

exports[`Bildwurf Ad Block should render WithClassName 1`] = `
<DocumentFragment>
  <script
    data-testid="fake-script"
    src="https://media.online.bildwurf.ch/js/code.min.js"
  />
  <div
    class="extra-classname css-1ege008-BildwurfBlockWrapper e14oxtci0"
  >
    
            
    <div
      id="bildwurf-injection-wrapper"
    >
      
              
      <ins
        classname="aso-zone"
        data-zone="77348"
      />
      
            
    </div>
    
          
  </div>
</DocumentFragment>
`;
